Actions
Bug #11219
closedmdb: smbsrv.c: error: comparison between pointer and integer
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../../common/modules/smbsrv/smbsrv.c: In function 'smb_hash_walk_init': ../../../common/modules/smbsrv/smbsrv.c:1926:11: error: comparison between pointer and integer [-Werror] if (addr == NULL) { ^~ ../../../common/modules/smbsrv/smbsrv.c: In function 'smb_hashstat_walk_init': ../../../common/modules/smbsrv/smbsrv.c:2015:11: error: comparison between pointer and integer [-Werror] if (addr == NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ae29b8adfe081d12042d2e5d0c843c6ad3842bd3
commit ae29b8adfe081d12042d2e5d0c843c6ad3842bd3 Author: Toomas Soome <tsoome@me.com> Date: 2019-08-06T15:21:20.000Z 11219 mdb: smbsrv.c: error: comparison between pointer and integer Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Juraj Lutter <juraj@lutter.sk> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions