11219 mdb: smbsrv.c: error: comparison between pointer and integer